--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "autoprefixer": "^10.3.4",
     "firebase": "^9.0.0",
+    "ng-http-loader": "^10.0.0",
     "ng-zorro-antd": "^12.0.1",
     "postcss": "^8.3.6",
     "rxfire": "^6.0.0",
