feature/product-card

--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,9 @@
               "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.scss"
             ],
+            "allowedCommonJsDependencies": [
+              "xlsx"
+            ],
             "scripts": []
           },
           "configurations": {
